- for continuous variables, the pseudo costs update and the pscost branching rule now use the same strategies for updating the pseudo costs and estimating the improvement in the LP bound
- only perform probing if the variables are locked
- performance and memory consumption improvements in xmlparse.c
- avoid very long separation times of LEWIs in cons_knapsack for very large minimal covers

fixed bugs:
- fixed bug in propagation of indicator constraints: cannot fix slack variable to 0 if linear constraint is disabled/not active
- fixed bug in cons_bounddisjunction where branching on multiaggregated variables was tried while all aggregation variables are fixed 
- fixed assertion in tree.c w.r.t. node estimation
- fixed bug in presolving of cons_logicor.c: adding variable implications can lead to further reductions; added call to applyFixings()
- fixed bug in cons_linear.c while sorting the eventdatas during the binary variable sorting for propagation
- fixed bug and wrong assert in heur_shiftandpropagate.c when relaxing continuous variables from the problem
- fixed bug in reader_fzn.c w.r.t. cumulative constraints
- fixed bug in copying if the target SCIP already is in solving stage: it might be that the copy of a variable cannot be found/created
- fixed memory leak in reader_pip.c
- fixed not correct merging of variable in logicor constraint handler and changed the name of the method to a common name used by other constraint handlers too(findPairsAndSets->mergeMultiples)
- fixed bug which occured when changing a bound in the solving stage when this variables got upgraded from continuous to a integer type, where the bounds of this variable were still not integral; due to that SCIPchgVarType has changed(see above)
- fixed bug which occured when the dual farkas multipliers were not available in the lpi because the LP could
  only be solved with the primal simplex due to numerical problems
- fixed bug in cons_orbitope:resprop() for the packing case

plugins: