@@ -3656,11 +3656,11 @@ SCIP_RETCODE SCIPlpiSetIntpar(
 	 setIntParam(lpi, CPX_PARAM_PPRIIND, CPX_PPRIIND_PARTIAL);
 	 setIntParam(lpi, CPX_PARAM_DPRIIND, CPX_DPRIIND_AUTO);
          break;
+      case SCIP_PRICING_LPIDEFAULT:
       case SCIP_PRICING_STEEP:
 	 setIntParam(lpi, CPX_PARAM_PPRIIND, CPX_PPRIIND_STEEP);
 	 setIntParam(lpi, CPX_PARAM_DPRIIND, CPX_DPRIIND_STEEP);
 	 break;
-      case SCIP_PRICING_LPIDEFAULT:
       case SCIP_PRICING_STEEPQSTART:
 	 setIntParam(lpi, CPX_PARAM_PPRIIND, CPX_PPRIIND_STEEPQSTART);
 	 setIntParam(lpi, CPX_PARAM_DPRIIND, CPX_DPRIIND_STEEPQSTART);
